[package]
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]
default-run = "hubbub"
edition = "2018"
name = "hubbub"
version = "0.1.0"

[dependencies]
bytes = "^1"
chrono = {version = "0.4", features = ["serde"]}
dashmap = "^4"
hubbublib = {path = "./hubbublib"}
serde-reflection = "^0.3.2"
serde_json = "^1.0"
serde_yaml = "^0.8.16"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "hubbub"
path = "src/main.rs"

[[example]]
name = "hub_talker"

[[example]]
name = "hub_listener"
