[package]
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]
default-run = "hub"
edition = "2018"
name = "hub_cli"
version = "0.1.0"

[dependencies]
clap = "~2.33.3"
hubbublib = {path = "../hubbublib"}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "hub"
path = "src/main.rs"
