[package]
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]
edition = "2018"
name = "hubbublib"
version = "0.1.0"

[dependencies]
bytes = "^1"
chrono = {version = "0.4", features = ["serde"]}
openssl = "^0.10"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "1", features = ["full"]}
