[package]
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]
edition = "2018"
name = "hubbublib"
version = "0.1.0"

[dependencies]
bytes = "^1"
chrono = {version = "0.4", features = ["serde"]}
dashmap = "^4"
openssl = "^0.10"
serde = {version = "^1.0", features = ["derive"]}
serde-reflection = "^0.3.2"
serde_json = "^1.0"
serde_yaml = "^0.8.16"
tokio = {version = "1", features = ["full"]}
