[package]
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]
edition = "2018"
name = "user_examples"
version = "0.1.0"

[dependencies]
bytes = "^1"
chrono = {version = "0.4", features = ["serde"]}
hubbublib = {path = "../hubbublib"}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "talker"
path = "src/talker.rs"

[[bin]]
name = "listener"
path = "src/listener.rs"
